--- a/mopidy_ytmusic/ext.conf
+++ b/mopidy_ytmusic/ext.conf
@@ -1,6 +1,7 @@
 [ytmusic]
 enabled = true
 auth_json =
+oauth_json =
 auto_playlist_refresh = 60
 youtube_player_refresh = 15
 playlist_item_limit = 100
